toolchain/engine/src/engine2/plan/snapshots/knot_engine__engine2__plan__parse__tests__parse_multiple_files.snap
---
source: toolchain/engine/src/engine2/plan/parse.rs
expression: bar.ast
---
Program(
    Module(
        Node(
            Module {
                imports: [],
                declarations: [
                    Declaration(
                        Node(
                            Constant {
                                storage: Storage {
                                    visibility: Public,
                                    binding: Binding(
                                        Node(
                                            Binding(
                                                "BAR",
                                            ),
                                            Range(
                                                Point(
                                                    1,
                                                    7,
                                                ),
                                                Point(
                                                    1,
                                                    9,
                                                ),
                                            ),
                                            (),
                                        ),
                                    ),
                                },
                                value_type: None,
                                value: Expression(
                                    Node(
                                        Primitive(
                                            Integer(
                                                456,
                                            ),
                                        ),
                                        Range(
                                            Point(
                                                1,
                                                13,
                                            ),
                                            Point(
                                                1,
                                                15,
                                            ),
                                        ),
                                        (),
                                    ),
                                ),
                            },
                            Range(
                                Point(
                                    1,
                                    1,
                                ),
                                Point(
                                    1,
                                    15,
                                ),
                            ),
                            (),
                        ),
                    ),
                ],
            },
            Range(
                Point(
                    1,
                    1,
                ),
                Point(
                    1,
                    16,
                ),
            ),
            (),
        ),
    ),
)
