toolchain/engine/src/engine2/plan/snapshots/knot_engine__engine2__plan__parse__tests__parse_multiple_files_from_glob-3.snap
---
source: toolchain/engine/src/engine2/plan/parse.rs
expression: main.raw
---
Program(
    Program(
        Module(
            Node(
                Module {
                    imports: [],
                    declarations: [
                        Declaration(
                            Node(
                                Constant {
                                    storage: Storage {
                                        visibility: Public,
                                        binding: Binding(
                                            Node(
                                                Binding(
                                                    "ROOT",
                                                ),
                                                Range(
                                                    Point(
                                                        1,
                                                        7,
                                                    ),
                                                    Point(
                                                        1,
                                                        10,
                                                    ),
                                                ),
                                                (),
                                            ),
                                        ),
                                    },
                                    value_type: None,
                                    value: Expression(
                                        Node(
                                            Primitive(
                                                Boolean(
                                                    true,
                                                ),
                                            ),
                                            Range(
                                                Point(
                                                    1,
                                                    14,
                                                ),
                                                Point(
                                                    1,
                                                    17,
                                                ),
                                            ),
                                            (),
                                        ),
                                    ),
                                },
                                Range(
                                    Point(
                                        1,
                                        1,
                                    ),
                                    Point(
                                        1,
                                        17,
                                    ),
                                ),
                                (),
                            ),
                        ),
                    ],
                },
                Range(
                    Point(
                        1,
                        1,
                    ),
                    Point(
                        1,
                        18,
                    ),
                ),
                (),
            ),
        ),
    ),
)
