toolchain/engine/src/engine2/plan/snapshots/knot_engine__engine2__plan__parse__tests__parse_one_empty_file.snap
---
source: toolchain/engine/src/engine2/plan/parse.rs
expression: module.ast
---
Program(
    Module(
        Node(
            Module {
                imports: [],
                declarations: [],
            },
            Range(
                Point(
                    1,
                    1,
                ),
                Point(
                    1,
                    1,
                ),
            ),
            (),
        ),
    ),
)
